--- a/task1.html
+++ b/task1.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Web Development Task 1</h1><br/>
         <h2>My PortFolio</h2>
-        <h2><a href="https://www.linkedin.com/in/sree-nihaar-chaturvedula-a221a7252/">SK.MANSOOR BASHEER BAIG</a></h2>
+        <h2><a href="https://www.linkedin.com/in/MANSOOR BASHEER BAIG SHAIK-a221a7252/">SK.MANSOOR BASHEER BAIG</a></h2>
         <!-- Overview -->
         <div class="Overview">
             <h3>Overview:</h3>
